# ML-Datacode-lib

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  build.rs  setup.dcmodule
compiler/: README.md  ml_native_named_args.json
compiler/integration/: README.md  apply_patch.sh  datacode_ml_named_args.patch
crates/datacode_ml_compiler/: Cargo.toml  ml_native_named_args.json
crates/datacode_ml_compiler/src/: lib.rs
docs/: ARCHITECTURE.md  LAYER_BACKLOG.md
docs/en/: ml_module.md  model_save_format.md  training_flow.md
docs/ru/: ml_module.md  model_save_format.md  training_flow.md
examples/en/1-mnist-mlp/: README.md  mnist_mlp_sh.dc
examples/en/1-tensor/: tensor_basics.dc
examples/en/3-mnist-mlp/: 1-mnist-mlp.dc  2-mnist-mlp-sh.dc  3-mnist-mlp-demo.dc
examples/ru/1-mnist-mlp/: mnist_mlp.dc  mnist_mlp_sh.dc  mnist_model_demo.dc
examples/ru/1-tensor/: tensor_basics.dc
examples/ru/2-dataset/: 1-creat-dataset.dc  2-create-image-dataset.dc  2-mnist.dc
examples/ru/3-mnist-mlp/: 1-mnist-mlp.dc  2-mnist-mlp-sh.dc  README.md  model_mnist.nn  model_mnist_sh.nn
src/: builtin_datasets.rs  dataset_push_data_abi.rs  dataset_split_abi.rs  forward_mode.rs  lib.rs
src/core/: backend_registry.rs  context.rs  datasets_manager.rs  device.rs  gpu_cache.rs  mnist_locate.rs  mnist_paths.rs  tensor.rs  tensor_pool.rs
src/core/datasets/: cifar_path.rs  mnist_path.rs  mod.rs
src/engine/: autograd.rs  conv.rs  graph.rs  ops.rs
src/gpu/: candle_integration.rs  ops_gpu.rs
src/nn/: dataset.rs  layer.rs  loss.rs  model.rs  optimizer.rs  scheduler.rs
src/vm/: abi_shim.rs  bound_method.rs  ml_types.rs  module_entry.rs  native_error.rs  natives.rs  plugin_abi_bridge.rs  plugin_opaque.rs  runtime.rs  vm_value.rs
tests/: dataset_concat_push_tests.rs  dataset_split_tests.rs  load_dataset_catalog_tests.rs  ml_api_tests.rs  ml_autograd_tests.rs  ml_backend_registry_integration.rs  ml_dataset_tests.rs  ml_graph_tests.rs  ml_layer_tests.rs  ml_linear_regression_tests.rs  ml_loss_tests.rs  ml_neural_network_tests.rs  ml_optimizer_tests.rs  ml_tensor_tests.rs  mnist_mlp_tests.rs  native_dataset_split_null_defaults.rs
tests/test_support/: mod.rs
