[package]
name = "ml"
version = "0.1.1"
edition = "2021"
description = "ML runtime for DataCode (tensors, autograd, optional GPU via Candle)"
license = "MIT"

[lib]
name = "ml"
path = "src/lib.rs"
# VM loads native plugins via dlopen; cdylib produces libml.so / libml.dylib / ml.dll
crate-type = ["rlib", "cdylib"]

[features]
default = []
gpu = ["dep:candle-core", "dep:candle-nn"]
cuda = ["gpu", "candle-core/cuda", "candle-nn/cuda"]
metal = ["gpu", "candle-core/metal", "candle-nn/metal"]

[dependencies]
datacode_sdk = { path = "datacode_sdk" }
datacode_abi = { path = "datacode_sdk/datacode_abi" }
ndarray = "0.15"
indicatif = "0.17"
serde_json = "1.0"
candle-core = { version = "0.9", default-features = false, optional = true }
candle-nn = { version = "0.9", default-features = false, optional = true }

# Integration tests run DataCode scripts via `data_code::run` (VM); not linked into `ml` rlib/cdylib.
# Git (not `path = "Datacode_rep"`) so `dpm add ml` clones work without a local VM checkout.
[dev-dependencies]
data-code = { git = "https://github.com/igornet0/DataCode", branch = "main" }
