[package]
name = "datacode_ml_compiler"
version = "0.1.0"
edition = "2021"
description = "Compile-time named-arg metadata for the host data-code compiler (JSON in this crate; ships with ML-Datacode-lib)"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
